update zms expiry notification unit test
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>